--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
             <li>
                 <a href="https://pacstall.dev/packages/protonplus">Ubuntu (Pacstall)</a> (Maintained by xdavius)
             </li>
+            <li>
+                <a href="https://software.opensuse.org/package/ProtonPlus">openSUSE</a> (Maintained by unknown)
+            </li>
         </ul>
     </section>
 
