Add copyright and fix download link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <a href="https://flathub.org/apps/com.vysp3r.ProtonPlus">
             <img width='240' alt='Download on Flathub' src='https://flathub.org/api/badge?svg&locale=en'
-                onclick="window.open('appstream://com.vysp3r.ProtonPlus');" />
+                onclick="window.open('appstream://com.vysp3r.ProtonPlus', '_self');" />
         </a>
 
         <h3>Unofficial download methods</h3>
@@ -69,6 +69,10 @@
         <a href="https://github.com/Vysp3r/ProtonPlus/issues/new?template=feature_request.md">Request a feature</a>
         <a href="https://hosted.weblate.org/projects/protonplus/protonplus/">Help translate</a>
         <a href="https://github.com/Vysp3r/ProtonPlus">GitHub repository</a>
+    </section>
+
+    <section class="copyright">
+        Copyright © <a href="https://vysp3r.com/">Vysp3r</a> 2025
     </section>
 </body>
 
