--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 <a href="https://mynixos.com/nixpkgs/package/protonplus">NixOS (MyNixOS)</a> (Maintained by Seth)
             </li>
             <li>
-                <a href="https://pacstall.dev/packages/protonplus">Ubuntu (Pacstall)</a> (Maintained by xdavius)
+                <a href="https://pacstall.dev/packages/protonplus">Ubuntu (Pacstall)</a> (Maintained by xdavius and Vysp3r)
             </li>
             <li>
-                <a href="https://software.opensuse.org/package/ProtonPlus">openSUSE</a> (Maintained by unknown)
+                <a href="https://software.opensuse.org/package/ProtonPlus">openSUSE</a> (Maintained by rrahl0)
             </li>
         </ul>
     </section>
