--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
             <li>
                 <a href="https://software.opensuse.org/package/ProtonPlus">openSUSE</a> (Maintained by rrahl0)
             </li>
+            <li>
+                <a href="https://github.com/xJayMorex/ProtonPlus-void">Void</a> (Maintained by xJayMorex)
+            </li>
         </ul>
     </section>
 
