--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <ul class="list">
             <li>Manage supported compatiblity tools across supported launchers</li>
             <li>Change the compatibility tool and launch options of your Steam games</li>
+            <li>And much more</li>
         </ul>
 
         <button class="accordion">Supported launchers</button>
