Add donation section

--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
 <body>
     <h1>ProtonPlus</h1>
 
-    <section class="description">
+    <section class="description" id="description">
         <p>
             Install and manage Wine/Proton based compatibility tools with a graphical user interface<br>
             Made with GTK4 and Adwaita
         </p>
     </section>
 
-    <section class="screenshots">
+    <section class="screenshots" id="screenshots">
         <h2>Screenshots</h2>
 
         <img src="https://raw.githubusercontent.com/Vysp3r/ProtonPlus/refs/heads/main/data/previews/Preview-1.png"
             alt="The main interface of ProtonPlus">
     </section>
 
-    <section class="features">
+    <section class="features" id="features">
         <h2>Features</h2>
 
         <ul class="list">
@@ -64,7 +64,6 @@
                 <li>Proton EM</li>
                 <li>Proton Tkg</li>
                 <li>Proton Sarek</li>
-                <li>Kron4ek Proton</li>
                 <li>Kron4ek Wine-Builds Vanilla</li>
                 <li>Kron4ek Wine-Builds Staging</li>
                 <li>Kron4ek Wine-Builds Staging-Tkg</li>
@@ -78,7 +77,7 @@
         </div>
     </section>
 
-    <section class="download">
+    <section class="download" id="download">
         <h2>Download</h2>
 
         <a href="https://flathub.org/apps/com.vysp3r.ProtonPlus">
@@ -112,7 +111,14 @@
         </ul>
     </section>
 
-    <section class="links">
+    <section class="donate" id="donate">
+        <h2>Donate</h2>
+
+        <a href="https://github.com/sponsors/Vysp3r">GitHub Sponsor</a>
+        <a href="https://www.paypal.com/donate/?business=F7KQ7LR84DLZ8&no_recurring=0&currency_code=USD">Paypal</a>
+    </section>
+
+    <section class="links" id="links">
         <h2>Links</h2>
 
         <a href="https://github.com/Vysp3r/ProtonPlus/issues/new?template=bug_report.md">Report an issue</a>
@@ -121,7 +127,7 @@
         <a href="https://github.com/Vysp3r/ProtonPlus">GitHub repository</a>
     </section>
 
-    <section class="copyright">
+    <section class="copyright" id="copyright">
         Copyright © <a href="https://vysp3r.com/">Vysp3r</a> 2025
     </section>
 </body>
