--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <li>Lutris</li>
                 <li>Heroic Games Launcher</li>
                 <li>Bottles</li>
+                <li>WineZGUI</li>
             </ul>
         </div>
 
@@ -64,6 +65,7 @@
                 <li>Proton EM</li>
                 <li>Proton Tkg</li>
                 <li>Proton Sarek</li>
+                <li>Kron4ek Wine-Builds Proton</li>
                 <li>Kron4ek Wine-Builds Vanilla</li>
                 <li>Kron4ek Wine-Builds Staging</li>
                 <li>Kron4ek Wine-Builds Staging-Tkg</li>
