--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2>Features</h2>
 
         <ul class="list">
-            <li>Manage supported compatiblity tools across supported launchers</li>
+            <li>Manage supported compatibility tools across supported launchers</li>
             <li>Change the compatibility tool and launch options of your Steam games</li>
             <li>And much more</li>
         </ul>
