Update NixOS link text in index.html
Signed-off-by: Vysp3r <dev@vysp3r.com>

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 by wehagy)
             </li>
             <li>
-                <a href="https://mynixos.com/nixpkgs/package/protonplus">NixOS (MyNixOS)</a> (Maintained by Seth)
+                <a href="https://mynixos.com/nixpkgs/package/protonplus">NixOS (nixpkgs)</a> (Maintained by Seth)
             </li>
             <li>
                 <a href="https://pacstall.dev/packages/protonplus">Ubuntu (Pacstall)</a> (Maintained by Vysp3r)
