--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 <li>Proton EM</li>
                 <li>Proton Tkg</li>
                 <li>Proton Sarek</li>
+                <li>Proton DW</li>
                 <li>Kron4ek Wine-Builds Proton</li>
                 <li>Kron4ek Wine-Builds Vanilla</li>
                 <li>Kron4ek Wine-Builds Staging</li>
